# gitflow

.github/workflows/: build.yml
cplus/CurlDemo/: CMakeLists.txt  main.cpp
cplus/CurlDemo/libs/: test.sh
cplus/CurlDemo/libs/curllib/lib/pkgconfig/: libcurl.pc
cplus/CurlDemo/libs/curllib/share/man/man1/: curl-config.1  curl.1  wcurl.1
cplus/CurlDemo/libs/curllib/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  (+479 more)
cplus/CurlDemo/libs/openssl/lib/pkgconfig/: libcrypto.pc
cplus/HttpServer/: CMakeLists.txt  http-server.h  main.cpp
crossbuild/: CMakeLists.txt  main.cpp  private.der  private.pem  private2.der  public.pem  test.sh
crossbuild/common/: Encrypt.cpp  Encrypt.h  aes.cpp  aes.h  base64.cpp  base64.h  chacha20.cpp  chacha20.h  common.cpp  common.h  config.cpp  config.h  digest.cpp  digest.h  digest_util.cpp  digest_util.h  ec.cpp  ec.h  elliptic_curve.cpp  elliptic_curve.h  fast_hex.cpp  fast_hex.h  file_utils.h  hex.cpp  hex.h  hmac.cpp  hmac.h  mac.cpp  mac.h  rsa.cpp  rsa.h  salt.cpp  salt.h  sm2.cpp  sm2.h  sm4.cpp  sm4.h
crossbuild/demo/: demo.h  demo_aes.cpp  demo_aes.h  demo_hmac.cpp  demo_hmac.h  demo_rsa.cpp  demo_rsa.h  ec.txt  speed.txt  tls.txt  tls_speed_test.sh
crossbuild/jni/: EncryptJni.cpp  EncryptJni.h
crossbuild/test/: hmac_sha_256_signer.cpp  hmac_sha_256_signer.h  test.h  test_base64.cpp  test_base64.h  test_cache.cpp  test_cache.h  test_chacha20.cpp  test_chacha20.h  test_digest.cpp  test_digest.h  test_ec.cpp  test_ec.h  test_hex.cpp  test_hex.h  test_hmac.cpp  test_hmac.h  test_rsa.cpp  test_rsa.h  test_sm2.cpp  test_sm2.h  test_sm4.cpp  test_sm4.h
hwss/: README.md
hwss/hwss/: CMakeLists.txt  build.sh  deps_build.sh  deps_clean.sh  deps_init.sh
hwss/hwss/docs/: base64.md  foundation.md  http_server.md  hwss websocket网关设计.docx  json.md  sse.md  websocket.md  二进制序列化协议.md
hwss/hwss/docs/design/: admin_clinet.md  hwss_admin.md  hwss_config.md  hwss_router.md
hwss/hwss/src/: hwss.cc  hwss_manager.cc
hwss/hwss/test/: CMakeLists.txt
hwss/hwss/tool/: README.md  example.com-key.pem  example.com.pem
mobile/: settings.gradle
mobile/app/: build.gradle
mobile/app/src/androidTest/java/com/example/encryptandroid/: ExampleInstrumentedTest.java
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/app/src/main/java/com/example/encryptandroid/: MainActivity.java
mobile/app/src/main/java/org/efurture/encrypt/: Encrypt.java
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/src/main/res/values-night/: themes.xml
mobile/app/src/test/java/com/example/encryptandroid/: ExampleUnitTest.java
mobile/gradle/wrapper/: gradle-wrapper.properties
pc/java/Encript/: header.sh  pom.xml
pc/java/Encript/include/: org_efurture_encrypt_Encrypt.h
pc/java/Encript/src/main/java/org/efurture/encrypt/: Encrypt.java
pc/java/Encript/src/main/java/org/efurture/test/: Main.java
